Revision history for Perl extension Module::Build.

0.34_05 - 

0.34_04 - Sat Aug  8 11:02:24 EDT 2009

 Other:
 - Added documentation warning that 'get_options' should be capitalized
   to avoid conflicting with future Module::Build options and changed
   the examples accordingly.

0.34_03 - Sat Aug  8 07:39:16 EDT 2009

 Bug fixes:
 - Fixed failing xs.t if /tmp is mounted noexec (RT#47331) [David Golden]
 - Fixed failing debug.t on VMS (RT#48362) [Craig Berry]
 - Prevent par.t from dying on error in .zip extraction [David Golden]
 - Fixed potential runthrough.t failure on 5.6.2 [David Golden]

 Other:
 - Archive::Tar changed from 'requires' to 'recommends' so non-authors
   without IO::Zlib can still use Module::Build to install modules
   [reported by Matt Trout, fix by David Golden]

0.34_02 - Sun Jul 26 22:50:40 EDT 2009

 Bug-fixes:
 - Bundled Module::Build::Version updated to bring into sync with CPAN
   version.pm 0.77 [John Peacock]

0.34_01 - Sat Jul 18 16:32:09 EDT 2009

 Enhancements:
 - Added --debug flag to trace Build action execution (RT#47933)
   [David Golden]

 Bug-fixes:
 - Bundled Module::Build::Version version code updated to fix unsafe use 
   of $@ (RT#47980) [John Peacock]

0.34 - Tue Jul  7 16:56:47 EDT 2009

 No changes from 0.33_06

0.33_06 - Sun Jul  5 10:11:40 EDT 2009

 Bug-fixes:
 - Bundled version code will use pure Perl on 5.10.0 to work around
   a corner case involving eval and locale [John Peacock]
 - Reversed VMS patch from 0.33_03 [Craig Berry]
 - PL_files in Build.PL that are in the bin/scripts directory should not be
   installed as if they are scripts (fixed for case-tolerant systems). 
   [David Golden, reported by Craig Berry]

0.33_05 - Sun Jun 28 22:06:49 EDT 2009

 Enhancements:
 - New 'auto_configure_requires' parameter (default 1) controls
   whether Module::Build should add itself to configure_requires
   in META.yml if not specified in Build.PL [David Golden]

 Bug-fixes: